# ERC_CS_Rover

./: .gitignore  .gitmodules  config.py  logs_display.sh  rovercameras.service  rovernode.service  start_rover.sh  stop_rover.sh
.github/workflows/: docker_ci.yml
SCRIPTS/: script_backend.sh  script_cameras.sh
SCRIPTS/test_cam/: webcam.py
docker_foxy_desktop/: Dockerfile  attach_to_docker.sh  build.sh  run.sh
docker_foxy_jetson/: Dockerfile  attach_to_docker.sh  build.sh  run.sh
docker_humble_desktop/: Dockerfile  attach_to_docker.sh  build.sh  run.sh  run_cameras.sh
docker_humble_jetson/: Dockerfile  attach_to_docker.sh  build.sh  compose.yaml  launch_rover.sh  run.sh  run_cameras.sh  run_rover.sh
docker_humble_jetson/launch_utilities/: node_launch.sh
rover_pkg/: setup.py
rover_pkg/launch/: new_rover_start.py  rover_start.py
rover_pkg/rover_pkg/: active_node_checker.py  db_logger.py  drill_model.py  elec_model.py  handling_device_model.py  hd_test_node.py  ip_names.json  monitor.py  nav_test_node.py  navigation_model.py  network_monitoring.py  new_camera_cs.py  new_camera_webrtc.py  new_model.py  new_rover.py  template_state.json  test.py  test_cam.py
rover_pkg/rover_pkg/models/: Drill.py  Elec.py  HandlingDevice.py  Navigation.py  SubSystem.py
rover_pkg_BT/: CMakeLists.txt  package.xml
rover_pkg_BT/src/: BTAction.cpp  action_client.cpp  action_server.cpp  test.txt  tree.xml
rover_ws/src/: sc_fsm.sh
rover_ws/src/rover_pkg/: setup.py
rover_ws/src/rover_pkg/launch/: rover_start.py
rover_ws/src/rover_pkg/rover_pkg/: cameras_publisher.py  launcher.py  monitor.py  new_camera_cs.py  rover.py
rover_ws/src/sc_fsm_drill/: CMakeLists.txt  package.xml
rover_ws/src/sc_fsm_drill/launch/: drill.py
rover_ws/src/sc_fsm_drill/src/: simplepublisher.cpp
